crates/es-fluent-derive/tests/ui/wrong_attribute_value_shapes.stderr
error: Attribute error in message field: `#[fluent(arg)]` has the wrong value shape for key `arg` in message field `value`
       help: use a string literal, for example `arg = "..."`
 --> tests/ui/wrong_attribute_value_shapes.rs:5:14
  |
5 |     #[fluent(arg)]
  |              ^^^

error: Attribute error in message field: `#[fluent(skip(...))]` has the wrong value shape for key `skip` in message field `hidden`
       help: use a bare flag, for example `skip`
  --> tests/ui/wrong_attribute_value_shapes.rs:11:14
   |
11 |     #[fluent(skip("hidden"))]
   |              ^^^^

error: Attribute error in message field: `#[fluent(selector(...))]` has the wrong value shape for key `selector` in message field `kind`
       help: use a bare flag, for example `selector`
  --> tests/ui/wrong_attribute_value_shapes.rs:13:14
   |
13 |     #[fluent(selector("kind"))]
   |              ^^^^^^^^

error: Attribute error in message field: `#[fluent(optional(...))]` has the wrong value shape for key `optional` in message field `maybe`
       help: use a bare flag, for example `optional`
  --> tests/ui/wrong_attribute_value_shapes.rs:15:14
   |
15 |     #[fluent(optional("maybe"))]
   |              ^^^^^^^^

error: Attribute error in label container: `#[fluent_label(origin(...))]` has the wrong value shape for key `origin` in label container `WrongLabelFlagShapes`
       help: use a bare flag, for example `origin`
  --> tests/ui/wrong_attribute_value_shapes.rs:20:16
   |
20 | #[fluent_label(origin("parent"), variants("children"))]
   |                ^^^^^^

error: Attribute error in label container: `#[fluent_label(variants(...))]` has the wrong value shape for key `variants` in label container `WrongLabelFlagShapes`
       help: use a bare flag, for example `variants`
  --> tests/ui/wrong_attribute_value_shapes.rs:20:34
   |
20 | #[fluent_label(origin("parent"), variants("children"))]
   |                                  ^^^^^^^^

error: Attribute error in variants container: `#[fluent_variants(keys(...))]` has the wrong value shape for key `keys` in variants container `WrongVariantsKeysShape`
       help: use a string array, for example `keys = ["label"]`
  --> tests/ui/wrong_attribute_value_shapes.rs:24:19
   |
24 | #[fluent_variants(keys("label"))]
   |                   ^^^^

error: Attribute error in choice container: `#[fluent_choice(rename_all)]` has the wrong value shape for key `rename_all` in choice container `WrongChoiceRenameShape`
       help: use a case style string, for example `rename_all = "snake_case"`
  --> tests/ui/wrong_attribute_value_shapes.rs:30:17
   |
30 | #[fluent_choice(rename_all)]
   |                 ^^^^^^^^^^
